[package]
name = "bpns"
version = "1.0.0"
edition = "2021"
rust-version = "1.57.0"
description = "Bitcoin Push Notification Service"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
license = "MIT"
homepage = "https://github.com/p2kishimoto/bpns"
repository = "https://github.com/p2kishimoto/bpns"
keywords = ["bitcoin", "push notification", "notifications", "bpns"]
readme = "README.md"

[features]
default = ["server", "matrix"]
server = ["actix-cors", "actix-web"]
matrix = ["matrix-sdk", "tokio", "tokio-stream"]
telegram = ["teloxide", "tokio", "tokio-stream"]

[dependencies]
bdk = "0.17.0"
bitcoin = "0.27.1"
bitcoin-rpc = { git = "https://github.com/p2kishimoto/bitcoin-rpc", rev = "9fef87182da7c24c380580c94c7aa649e552aa77" }
clap = { version = "3.0.14", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.4"
rayon = "1.5.1"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
rocksdb = { version = "0.17.0", default-features = false, features = ["zstd", "multi-threaded-cf"] }
sha2 = "0.10.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
toml = "0.5.8"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"], optional = true }
tokio-stream = { version = "0.1.8", optional = true }

# Server dependencies
actix-cors = { version = "0.5.4", optional = true }
actix-web = { version = "3.3.3", optional = true }

# Matrix dependencies
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev= "35f598a09582d69a7c73de806c63318ca10b7d39", features = ["encryption", "sled-crypto-store", "sled-state-store", "socks"], optional = true }

# Telegram dependencies
teloxide = { version = "0.5.3", features = ["macros", "auto-send"], optional = true }

[[bin]]
name = "bpnsd"

[profile.release]
lto = true
codegen-units = 1